--- a/sample/package.json
+++ b/sample/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "firebase": "^7.24.0",
     "fontawesome": "^5.6.3",
     "query-string": "^6.11.0",
     "react": "^16.12.0",
